# speech2text-net

./: .gitignore  AGENTS.md  README.md  gpu-cleanup.sh  install.sh  pyproject.toml  speech2text-net.conf.example
configs/: client.example.conf  server-local.example.conf  server-tailscale.example.conf  workstation.example.conf
src/speech2text_net/: __init__.py  cli.py
src/speech2text_net/client/: __init__.py  api.py  cli.py
src/speech2text_net/core/: __init__.py  cleanup.py  clipboard.py  config.py  logging.py  media.py  recording.py  shell.py  title.py  transcribe.py  utils.py
src/speech2text_net/server/: __init__.py  app.py  auth.py  cli.py
src/speech2text_net/shared/: __init__.py  models.py
tests/: test_client_smoke.py  test_config.py  test_recording.py  test_server_auth.py
