[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "speech2text-net"
version = "0.8.0"
description = "Network-capable speech-to-text project with client/server architecture"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "tobias" }
]

[project.scripts]
speech2text-net = "speech2text_net.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
